default/objects/Action_Type_Config__c/Action_Type_Config__c.object-meta.xml
<CustomObject>
    <label>Action Type Config</label>
    <nameField>
        <displayFormat>ATC-{0000}</displayFormat>
        <label>Action Type Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Action_Type_Config</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>