default/objects/Action_Type_Config__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Question</fullName>
            </value>
            <value>
                <fullName>Add Authorized User</fullName>
            </value>
            <value>
                <fullName>Add or Remove Beneficiary</fullName>
            </value>
            <value>
                <fullName>Add or Remove Driver or Vehicle</fullName>
            </value>
            <value>
                <fullName>Add or Remove Joint Owner</fullName>
            </value>
            <value>
                <fullName>Address Change</fullName>
            </value>
            <value>
                <fullName>Ask a Question</fullName>
            </value>
            <value>
                <fullName>Change an Investment</fullName>
            </value>
            <value>
                <fullName>Change Due Date</fullName>
            </value>
            <value>
                <fullName>Change Loan Date</fullName>
            </value>
            <value>
                <fullName>Close Acccount / Change Insurance Provided</fullName>
            </value>
            <value>
                <fullName>Close Credit Card Account</fullName>
            </value>
            <value>
                <fullName>Close Debit Card Account</fullName>
            </value>
            <value>
                <fullName>Close Deposit Account</fullName>
            </value>
            <value>
                <fullName>Close Wealth Account</fullName>
            </value>
            <value>
                <fullName>Courtesy Pay or NSF</fullName>
            </value>
            <value>
                <fullName>Credit Card Advance</fullName>
            </value>
            <value>
                <fullName>Debit Card Fraud</fullName>
            </value>
            <value>
                <fullName>Debit Card Not Working</fullName>
            </value>
            <value>
                <fullName>Fraud</fullName>
            </value>
            <value>
                <fullName>Fraud Issue</fullName>
            </value>
            <value>
                <fullName>Freeze Card</fullName>
            </value>
            <value>
                <fullName>General Questions</fullName>
            </value>
            <value>
                <fullName>Get a Quote</fullName>
            </value>
            <value>
                <fullName>HELOC Credit Card Inquiries</fullName>
            </value>
            <value>
                <fullName>Increase Credit Line</fullName>
            </value>
            <value>
                <fullName>Insurance Claim</fullName>
            </value>
            <value>
                <fullName>Lost Debit Card</fullName>
            </value>
            <value>
                <fullName>Make a Payment</fullName>
            </value>
            <value>
                <fullName>Name Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>