default/objects/Action_Type_Config__c/fields/Additional_Case_Fields__c.field-meta.xml
<CustomField>
    <fullName>Additional_Case_Fields__c</fullName>
    <description>API names of case fields that needs to appear on case form for user&apos;s input</description>
    <inlineHelpText>API names of case fields that needs to appear on case form for user&apos;s input</inlineHelpText>
    <label>Additional Case Fields</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>