default/objects/Action_Type_Config__c/fields/Config_Type__c.field-meta.xml
<CustomField>
    <fullName>Config_Type__c</fullName>
    <label>Config Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product Type</fullName>
            </value>
            <value>
                <fullName>Financial Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>