default/objects/Action_Type_Config__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <label>Disclosure</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>