default/objects/Action_Type_Config__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card Request / Maintenance</fullName>
            </value>
            <value>
                <fullName>Debit Card Request / Maintenance</fullName>
            </value>
            <value>
                <fullName>Deposit Account Request / Maintenance</fullName>
            </value>
            <value>
                <fullName>General Assistance &amp; Customer Info Changes</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Loan Request / Maintenance</fullName>
            </value>
            <value>
                <fullName>Mortgage Request / Maintenance</fullName>
            </value>
            <value>
                <fullName>Open Account</fullName>
            </value>
            <value>
                <fullName>Wealth / Investment</fullName>
            </value>
            <value>
                <fullName>Refer a Friend or Family Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>