default/objects/Action_Type_Config__c/fields/Values__c.field-meta.xml
<CustomField>
    <fullName>Values__c</fullName>
    <description>Comma separated list of available values</description>
    <inlineHelpText>Comma separated list of available values</inlineHelpText>
    <label>Values</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>