default/objects/Action_Type_Config__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service_Type__c</columns>
    <columns>Action_Type__c</columns>
    <columns>Config_Type__c</columns>
    <columns>Values__c</columns>
    <columns>Additional_Case_Fields__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>